# QQMusicApi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.py  skills-lock.json  zensical.toml
.claude/skills/python-standards/: SKILL.md
.claude/skills/tarsio/: SKILL.md
.claude/skills/tarsio/references/: api-reference.md
.claude/skills/uv-package-manager/: SKILL.md
.github/workflows/: checking.yaml  docs.yml  pre-commit.yml  release.yml  testing.yml
docs/: coding.md  contributing.md  release-notes.md  session.md
docs/api/: exceptions.md
docs/examples/: login.md
docs/reference/core/: exception.md
docs/tutorial/: client.md  pager.md  web.md
examples/: phone_login.py  qrcode_login.py
qqmusic_api/: __init__.py  client.py  login.py  recommend.py  singer.py  song.py  songlist.py  user.py
qqmusic_api/algorithms/: __init__.py  _core.c  _core.pyi  _sign_c.py  _tripledes_c.py  sign.py
qqmusic_api/core/: __init__.py  client.py  exceptions.py  middlewares.py  pagination.py  request.py  versioning.py
qqmusic_api/models/: __init__.py  album.py  base.py  comment.py  login.py  request.py  singer.py  song.py  songlist.py  top.py  user.py
qqmusic_api/modules/: __init__.py  _base.py  album.py  comment.py  login.py  login_utils.py  lyric.py  mv.py  recommend.py  search.py  singer.py  song.py  songlist.py  top.py  user.py
qqmusic_api/utils/: __init__.py  common.py  device.py  mqtt.py  network.py  qimei.py  sign.py
scripts/: check_web_routes.py  generate_web_routes.py
tests/: conftest.py  test_album.py  test_algorithms.py  test_comment.py  test_exceptions.py  test_integration.py  test_login.py  test_login_utils.py  test_modules_base.py  test_mv.py  test_pagination.py  test_recommend.py  test_request.py  test_requests.py  test_search.py  test_sign.py  test_singer.py  test_song.py  test_songlist.py  test_top.py  test_user.py  test_utils.py  test_versioning.py
tests/core/: test_request.py  test_versioning.py
tests/integration/: test_album_comment_flow.py
tests/modules/: test_album.py  test_comment.py  test_login.py  test_lyric.py  test_mv.py  test_recommend.py  test_songlist.py  test_top.py
tests/modules/search/: test_search.py
tests/modules/singer/: test_singer.py
tests/modules/song/: test_song.py
tests/modules/user/: test_user.py
tests/support/: factories.py  fixtures.py
tests/utils/: test_algorithms.py  test_device.py  test_mqtt.py  test_qimei.py
web/: .gitignore  Dockerfile  README.md  accounts.example.toml  app.py  auth.py  cache.py  config.example.toml  config.toml  enum_utils.py  query_models.py  requirements.txt  response.py  route_manifest.py  route_registry.py  routing.py  run.py  schema.py  test_app.py
web/modules/: __init__.py  login.py  mv.py  singer.py  song.py  songlist.py
web/src/: _generated_contracts.py  _generated_models.py  app.py  auth.py  cache.py  config.py  credential_store.py  deps.py  enum_utils.py  query_models.py  response.py  route_manifest.py  route_registry.py  routing.py  schema.py  security.py
web/src/core/: __init__.py  auth.py  cache.py  config.py  credential_store.py  deps.py  response.py  security.py
web/src/modules/: login.py  mv.py  singer.py  song.py  songlist.py
web/src/routes/: __init__.py  _helpers.py  album.py  comment.py  login.py  lyric.py  mv.py  recommend.py  search.py  singer.py  song.py  songlist.py  top.py  user.py
web/src/routing/: __init__.py  docstrings.py  enum_utils.py  executor.py  params.py  route_types.py  router_factory.py
web/tests/: test_web_docstrings.py  test_web_enums.py  test_web_route_validation.py  test_web_routes.py
