[project]
name = "qqmusic-api-python"
description = "QQ音乐API封装库"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
maintainers = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
keywords = ["api", "music", "qqmusic", "tencentmusic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Framework :: aiohttp",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anyio>=4.12.1",
  "cryptography>=46.0.3",
  "httpx-ws>=0.8.2",
  "httpx[http2]>=0.27.0",
  "orjson>=3.10.15",
  "pydantic>=2.0.0",
  "tarsio>=0.5.0",
  "typing-extensions>=4.12.2",
]
dynamic = ["version"]

[project.urls]
documentation = "https://l-1124.github.io/QQMusicApi/"
homepage = "https://l-1124.github.io/QQMusicApi/"
repository = "https://github.com/l-1124/QQMusicApi"

[dependency-groups]
dev = [
  { include-group = "linting" },
  { include-group = "testing" },
]
linting = [
  "basedpyright>=1.37.2",
  "pre-commit>=4.5.1",
  "ruff>=0.14.14",
]
docs = [
  "docstring-inheritance>=2.2.1",
  "griffe-inherited-docstrings>=1.0.0",
  "griffe-modernized-annotations>=1.0.8",
  "markdown-callouts>=0.4.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.29",
  "mkdocstrings>=0.25.1",
  "mkdocstrings-python>=2.0.1",
]
testing = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-sugar>=1.1.1",
]
web = [
  "fastapi>=0.115.8",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_gitmoji"

[tool.hatch.version]
path = "qqmusic_api/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["qqmusic_api"]

[tool.hatch.build.targets.sdist]
include = ["/qqmusic_api", "/tests", "LICENSE", "README.md"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["qqmusic_api"]
exclude = ["tests", "examples", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest]
addopts = ["-rxXs"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 120
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-select = [
  "Q",
  "RUF",
  "C90",
  "UP",
  "I",
  "D",
  "ASYNC",
  "C4",
  "FURB",
  "PERF",
]
ignore = ["D105", "D107", "D205", "D415", "RUF029"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D", "T"]
"qqmusic_api/__init__.py" = ["F405", "D"]
"qqmusic_api/**/__init__.py" = ["F405", "D"]

[tool.uv]
package = true
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
